--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ RoxygenNote: 7.2.3
 Depends: 
     R (>= 2.10)
 LazyData: true
+URL: https://github.com/jstatlab/demo
+BugReports: https://github.com/jstatlab/demo/issues
