--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: demo
-Title: What the Package Does (One Line, Title Case)
+Title: Demo of a Simple Package in R
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("J. S.", "Jale", , "jstatlab@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Description: Just a simple package in R.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
@@ -15,3 +14,6 @@ Depends:
 LazyData: true
 URL: https://github.com/jstatlab/demo
 BugReports: https://github.com/jstatlab/demo/issues
+Imports: 
+    dados,
+    dplyr
