--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,5 +19,7 @@ Imports:
     dplyr
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
